--- a/webhooks/package.json
+++ b/webhooks/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev" : "tsc -b && node dist/index.js"
   },
   "keywords": [],
   "author": "",
@@ -11,7 +12,11 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.4.1",
+    "express": "^4.21.2",
     "prisma": "^6.4.1",
     "typescript": "^5.8.2"
+  },
+  "devDependencies": {
+    "@types/express": "^5.0.0"
   }
 }
