feat : added mail webhook using nodemailer and google smtp

--- a/workers/package.json
+++ b/workers/package.json
@@ -4,8 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev" : "tsc -b && node dist/index.js"
-
+    "dev": "tsc -b && node dist/index.js"
   },
   "keywords": [],
   "author": "",
@@ -13,8 +12,14 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.4.1",
+    "@types/dotenv": "^6.1.1",
+    "dotenv": "^16.4.7",
     "kafkajs": "^2.2.4",
+    "nodemailer": "^6.10.0",
     "prisma": "^6.4.1",
     "typescript": "^5.8.2"
+  },
+  "devDependencies": {
+    "@types/nodemailer": "^6.4.17"
   }
 }
